Improve symbol navigation
Change how the URL to file is processed with the help of IntelliJ IDEA
util classes so that the URL is IntelliJ IDEA friendly. This is really
needed for opening files which are inside archive files such as jar
files.